<resources>
    <string name="app_name">Questik</string>
    <string name="home_project">Проекты</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Questik</string>
    <string name="nav_header_subtitle">насчитай себе на мазерати... ну или на геморой</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="project_item">Проекты</string>
    <string name="catalog_item">Каталог</string>
    <string name="catalog_item_name">Наименование</string>
    <string name="chern_item">Черновик</string>
    <string name="manage_item">Настройки</string>
    <string name="communicate_item">Коммуникация с внешим миром</string>
    <string name="share_item">Сохранить</string>
    <string name="send_item">Отправить</string>
    <string name="action_save">Сохранить</string>
    <string name="action_edit">Изменить</string>
    <string name="action_delete">Удалить</string>
    <string name="hello_blank_fragment">Скоро тут будет нечто</string>
    <string name="chat_item">Чатик</string>
    <string name="help_item">Помощь</string>
    <string name="game_item">Time kill</string>
    <string name="doc_item">Оленеводство</string>
    <string name="howto_item">Как не обосраться</string>
    <string name="add_job">Добавить</string>
    <string name="price">Цена</string>
    <string name="name">Наименование</string>
    <string name="menu_project">Проекты</string>
    <string name="menu_catalog">Каталог</string>
    <string name="menu_chern">Черновик</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_chat">Чат</string>
    <string name="menu_game">Игра</string>
    <string name="menu_doc">Документация</string>
    <string name="menu_howto">Помощь</string>
    <string name="message_error_has_occurred">Пиздец</string>
    <string name="try_again_btn">еще разок?</string>
    <string name="system">Приложение</string>
    <string name="refresh">обновить</string>
    <string name="home_item">Главная</string>
    <string name="logging_you_out">Вы покинули закрытый канал</string>
    <string name="there_was_an_error_logout">Некая ошибка имела место быть</string>
    <string name="something_went_wrong">Поломалося!!!!!</string>
    <string name="could_not_fetch_items">Не найденно</string>
    <string name="no_internet">Интернета нет!</string>
    <string name="could_not_show_items">Не могу показать!</string>
    <string name="version">Версия:</string>
    <string name="open_drawer">развернуть</string>
    <string name="close_drawer">свернуть</string>
    <string name="updated_items">обновление страницы</string>
    <string name="login">Вход</string>
    <string name="Email">Email</string>
    <string name="Password">password</string>
    <string name="empty_email">Введи почту баран!</string>
    <string name="invalid_email">Это не почта России баран!</string>
    <string name="empty_password">Без пароля пошел на хуй!</string>
    <string name="signing_in">Авторизация усппешна</string>
    <string name="server_sign_in_failed">не получилось</string>
    <string name="cannnot_initiate_sign_in">пока еще не работает</string>
    <string name="app_market_link">пока не в маркет</string>
    <string name="app_google_playstore_link">ссылка</string>
    <string name="some_error">хз что за ошибка</string>
    <string name="something_went_wrong_by_project_detail">хуйня с проджект детейл</string>
    <string name="project_name">Название проекта</string>
    <string name="project_created">дата создания</string>
    <string name="project_autor">Автор:</string>
    <string name="project_end">Дата завершния:</string>
    <string name="project_end_date">дата завершения</string>
    <string name="poject_autor_nik">ник создателя</string>
    <string name="project_date_start">Дата создания:</string>
    <string name="add">Добавить</string>
    <string name="reset">Отмена</string>
    <string name="job_saved">Сохраненно!!!</string>
    <string name="add_more">Добавить ещё</string>
    <string name="offline">Оффлайн</string>
    <string name="register">Регистрация</string>
    <string name="btn_cancel">Назад</string>
    <string name="user_name">Имя пользователя/Никнэйм</string>
    <string name="empty_name">Заполните имя/ник!</string>
    <string name="register_error">Ошибка регистрации</string>
    <string name="login_in">Удачный вход!</string>
    <string name="login_error">Ошибка входа!</string>
    <string name="invalid_register">Обломашки</string>
    <string name="invalid_auth">Ошибка входа</string>
    <string name="user_email">почта</string>
    <string name="nav_profile">Профиль</string>
    <string name="logout">LogOut</string>
    <string name="project_client_name">Ф.И.О клиента</string>
    <string name="project_client_phone">Номер телефона клиента</string>
    <string name="project_client_mail">Эл.почта клиента</string>
    <string name="start_date">01.02.3456</string>
    <string name="end_date">01.02.3456</string>
    <string name="autor_user_name">installer</string>
    <string name="auff">тук-тук</string>
    <string name="_19800_uah">19800 UAH</string>
    <string name="title">Заголовки</string>
    <string name="project_info">Проект:</string>
    <string name="project_tab_job">Работы:</string>
    <string name="project_tab_material">Мат-лы:</string>
    <string name="project_tab_itog">Итог:</string>
    <string name="action_auth">log(in, out)</string>



    <string name="project_save_error">Полный пиздец с сохранением</string>
</resources>
