<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_item" />
        <item
            android:id="@+id/nav_project"
            android:title="@string/project_item" />
        <item
            android:id="@+id/nav_catalog"
            android:title="@string/catalog_item" />
        <item
            android:id="@+id/nav_chern"

            android:title="@string/chern_item" />
        <item
            android:id="@+id/nav_manage"
            android:title="@string/manage_item" />
    </group>

    <item android:title="@string/communicate_item">
        <menu>
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/chat_item" />
        </menu>
    </item>

    <item android:title="@string/help_item">
        <menu>
            <item
                android:id="@+id/nav_game"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/game_item" />
            <item
                android:id="@+id/nav_doc"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/doc_item" />
            <item
                android:id="@+id/nav_howto"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/howto_item" />
        </menu>
    </item>
    <item android:title="@string/system">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/nav_profile" />

        </menu>
    </item>
</menu>
