<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/project_name_edt"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="center|left|bottom"
                android:hint="@string/project_name"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/project_client_edt"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_border_bottom"
            android:cursorVisible="true"
            android:gravity="center|left|bottom"
            android:hint="@string/project_client_name"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/project_phone_edt"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_border_bottom"
            android:cursorVisible="true"
            android:gravity="center|left|bottom"
            android:hint="@string/project_client_phone"
            android:inputType="text|phone"
            android:maxLength="50"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/project_mail_edt"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_border_bottom"
            android:cursorVisible="true"
            android:gravity="center|left|bottom"
            android:hint="@string/project_client_mail"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingBottom="10dp"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sometext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            android:text="Создан:" />

        <TextView
            android:id="@+id/project_dataOn_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/start_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sometext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            android:text="Завершен:" />

        <TextView
            android:id="@+id/project_dataOff_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/end_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sometext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            android:text="Автор проекта:" />

        <TextView
            android:id="@+id/project_user_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/autor_user_name" />

    </LinearLayout>


</LinearLayout>